# rinha-crebito-cpp

./: .gitattributes  LICENSE  README.md  callgrind.out.7.1  docker-compose.yml  executar-teste-local.sh
app/: CMakeLists.txt  Dockerfile  Extrato.cc  Extrato.h  config.json  main.cc
database/: Dockerfile  my.cnf  my.cnf.bkp  priority0-all-users.sql  priority1-all-schemas.sql
load-test/user-files/results/rinhabackendcrebitossimulation-20240209013700804/: index.html  req_cre-ditos-1306955929.html  req_de-bitos-1025427916.html  req_extratos--1809255608.html  req_validac-o-es--40002687.html
load-test/user-files/results/rinhabackendcrebitossimulation-20240209015101717/: index.html  req_cre-ditos-1306955929.html  req_de-bitos-1025427916.html  req_extratos--1809255608.html  req_validac-o-es--40002687.html
load-test/user-files/results/rinhabackendcrebitossimulation-20240209025914684/: index.html  req_cre-ditos-1306955929.html  req_de-bitos-1025427916.html  req_extratos--1809255608.html  req_validac-o-es--40002687.html
load-test/user-files/results/rinhabackendcrebitossimulation-20240209034108018/: index.html  req_cre-ditos-1306955929.html  req_de-bitos-1025427916.html  req_extratos--1809255608.html  req_validac-o-es--40002687.html
load-test/user-files/results/rinhabackendcrebitossimulation-20240209035552749/: index.html  req_cre-ditos-1306955929.html  req_de-bitos-1025427916.html  req_extratos--1809255608.html  req_validac-o-es--40002687.html
loadbalancer/: CMakeLists.txt  Dockerfile  config.json  main.cc  nginx.conf
loadbalancer/plugins/: SimpleReverseProxy.cc
(+84 files in other folders)
